--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2022",
-    "module": "commonjs",
+    "module": "node16",
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
@@ -10,6 +10,7 @@
     "importsNotUsedAsValues": "error",
     "ignoreDeprecations": "5.0",
     "strict": true,
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
