ci: fix publish

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
 
   publish:
     name: Publish
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/alpha' || github.ref == 'refs/heads/beta'
     needs: [sanity]
     runs-on: ubuntu-latest
     steps:
