--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "node16",
     "declaration": true,
     "sourceMap": true,
+    "removeComments": true,
     "outDir": "./dist",
     "rootDir": "./src",
     "importHelpers": true,
