--- a/package-e2e/tsconfig.json
+++ b/package-e2e/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "Node16",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "strict": true,
     "noEmit": true
   },
