--- a/package-e2e/tsconfig.json
+++ b/package-e2e/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
@@ -11,5 +11,5 @@
   },
   "files": [
     "test.ts"
-  ],
+  ]
 }
