--- a/package.json
+++ b/package.json
@@ -103,9 +103,9 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@jest/environment": "^29.3.1",
-    "@jest/reporters": "^29.3.1",
-    "@jest/types": "^29.3.1",
+    "@jest/environment": "^30.0.0-beta.3",
+    "@jest/reporters": "^30.0.0-beta.3",
+    "@jest/types": "^30.0.0-beta.3",
     "@types/bunyan": "^1.8.11",
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
@@ -125,14 +125,14 @@
     "eslint-plugin-unicorn": "^50.0.1",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "jest-environment-node": "^29.6.2",
+    "jest": "^30.0.0-beta.3",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jest-environment-node": "^30.0.0-beta.3",
     "lint-staged": "^15.2.0",
     "lodash": "^4.17.21",
     "prettier": "^3.1.1",
     "semantic-release": "^22.0.12",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.3.4",
     "typescript": "~5.2.0"
   },
   "browserslist": [
