--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2022",
-    "module": "node16",
+    "target": "ES2022",
+    "module": "NodeNext",
     "declaration": true,
     "sourceMap": true,
     "removeComments": true,
