feat: support jest@30

--- a/package.json
+++ b/package.json
@@ -103,9 +103,9 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@jest/environment": "^30.0.0-beta.3",
-    "@jest/reporters": "^30.0.0-beta.3",
-    "@jest/types": "^30.0.0-beta.3",
+    "@jest/environment": "^30.0.0",
+    "@jest/reporters": "^30.0.0",
+    "@jest/types": "^30.0.0",
     "@types/bunyan": "^1.8.11",
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
@@ -125,9 +125,9 @@
     "eslint-plugin-unicorn": "^50.0.1",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jest": "^30.0.0-beta.3",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
-    "jest-environment-node": "^30.0.0-beta.3",
+    "jest": "^30.0.0",
+    "jest-environment-jsdom": "^30.0.0",
+    "jest-environment-node": "^30.0.0",
     "lint-staged": "^15.2.0",
     "lodash": "^4.17.21",
     "prettier": "^3.1.1",
