--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        jest-version: [29, 30.0.0-beta.3]
+        jest-version: [29, 30]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
